simulation-wasm/test_output.txt
warning: unused import: `serde::Serialize`
 --> src/lib.rs:7:5
  |
7 | use serde::Serialize;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `allies`
   --> src/simulation.rs:661:32
    |
661 | fn get_actions(c: &Combattant, allies: &[Combattant], enemies: &[Combattant]) -> Vec<Action> {
    |                                ^^^^^^ help: if this is intentional, prefix it with an underscore: `_allies`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `enemies`
   --> src/simulation.rs:661:55
    |
661 | fn get_actions(c: &Combattant, allies: &[Combattant], enemies: &[Combattant]) -> Vec<Action> {
    |                                                       ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_enemies`

warning: unused variable: `a`
   --> src/simulation.rs:932:22
    |
932 |         Action::Heal(a) => {
    |                      ^ help: if this is intentional, prefix it with an underscore: `_a`

warning: function `average` is never used
  --> src/dice.rs:11:8
   |
11 | pub fn average(formula: &DiceFormula) -> f64 {
   |        ^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: enum `ActionSlot` is never used
 --> src/enums.rs:4:10
  |
4 | pub enum ActionSlot {
  |          ^^^^^^^^^^

warning: enum `ActionType` is never used
   --> src/enums.rs:104:10
    |
104 | pub enum ActionType {
    |          ^^^^^^^^^^

   Compiling simulation-wasm v0.1.0 (/Users/max/Rust/Battlesim2/simulation-wasm)
warning: `simulation-wasm` (lib) generated 7 warnings (run `cargo fix --lib -p simulation-wasm` to apply 1 suggestion)
error: argument never used
  --> examples/debug_monster_r1.rs:75:68
   |
75 |             println!("  Team 1 - {}: HP {{:.1}}", c.creature.name, c.final_state.current_hp);
   |                      ---------------------------                   ^^^^^^^^^^^^^^^^^^^^^^^^ argument never used
   |                      |
   |                      formatting specifier missing

error: argument never used
  --> examples/debug_monster_r1.rs:76:45
   |
76 |             println!("    Actions: {{:?}}", c.actions.iter().map(|ca| ca.action.base().name.clone()).collect::<Vec<_>>());
   |                      ---------------------  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ argument never used
   |                      |
   |                      formatting specifier missing
   |
help: format specifiers use curly braces, consider adding a format specifier
   |
76 |             println!("    Actions: {{:?}}{}", c.actions.iter().map(|ca| ca.action.base().name.clone()).collect::<Vec<_>>());
   |                                          ++

error: argument never used
  --> examples/debug_monster_r1.rs:79:68
   |
79 |             println!("  Team 2 - {}: HP {{:.1}}", c.creature.name, c.final_state.current_hp);
   |                      ---------------------------                   ^^^^^^^^^^^^^^^^^^^^^^^^ argument never used
   |                      |
   |                      formatting specifier missing

error: argument never used
  --> examples/debug_monster_r1.rs:80:45
   |
80 |             println!("    Actions: {{:?}}", c.actions.iter().map(|ca| ca.action.base().name.clone()).collect::<Vec<_>>());
   |                      ---------------------  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ argument never used
   |                      |
   |                      formatting specifier missing
   |
help: format specifiers use curly braces, consider adding a format specifier
   |
80 |             println!("    Actions: {{:?}}{}", c.actions.iter().map(|ca| ca.action.base().name.clone()).collect::<Vec<_>>());
   |                                          ++

error[E0432]: unresolved import `crate::model`
 --> examples/debug_monster_r1.rs:1:12
  |
1 | use crate::model::*;
  |            ^^^^^ could not find `model` in the crate root

error[E0432]: unresolved import `crate::enums`
 --> examples/debug_monster_r1.rs:2:12
  |
2 | use crate::enums::*;
  |            ^^^^^ could not find `enums` in the crate root

error[E0432]: unresolved import `crate::simulation`
 --> examples/debug_monster_r1.rs:3:5
  |
3 | use crate::simulation;
  |     ^^^^^^^^^^^^^^^^^ no `simulation` in the root

For more information about this error, try `rustc --explain E0432`.
error: could not compile `simulation-wasm` (example "debug_monster_r1") due to 7 previous errors
warning: build failed, waiting for other jobs to finish...
error[E0063]: missing field `con_save_bonus` in initializer of `model::Creature`
  --> src/./simulation_test.rs:12:23
   |
12 |             creature: Creature {
   |                       ^^^^^^^^ missing `con_save_bonus`

error[E0063]: missing field `concentrating_on` in initializer of `model::CreatureState`
  --> src/./simulation_test.rs:25:28
   |
25 |             initial_state: CreatureState {
   |                            ^^^^^^^^^^^^^ missing `concentrating_on`

error[E0063]: missing field `concentrating_on` in initializer of `model::CreatureState`
  --> src/./simulation_test.rs:33:26
   |
33 |             final_state: CreatureState {
   |                          ^^^^^^^^^^^^^ missing `concentrating_on`

error[E0063]: missing field `concentration` in initializer of `model::Buff`
  --> src/./simulation_test.rs:62:19
   |
62 |             buff: Buff {
   |                   ^^^^ missing `concentration`

For more information about this error, try `rustc --explain E0063`.
warning: `simulation-wasm` (lib test) generated 4 warnings (4 duplicates)
error: could not compile `simulation-wasm` (lib test) due to 4 previous errors; 4 warnings emitted
